--- a/myapp/src/app.html
+++ b/myapp/src/app.html
@@ -40,6 +40,25 @@
 		width: 100%;
 		object-fit: cover;
 	}
+
+	body::-webkit-scrollbar {
+    width: 1em;
+	}
+	
+	body::-webkit-scrollbar-track {
+		background-color: #434148;
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+	}
+	
+	body::-webkit-scrollbar-thumb {
+		background-color: #37808d8e;
+		width: .5em;
+		border-radius: 5px;
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+
+
 	
 
 </style>
